--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn run lint:js",
     "e2e": "cypress run",
-    "e2e:open": "cypress open"
+    "e2e:open": "cypress open",
+    "start:ci": "yarn run dev"
   },
   "dependencies": {
     "@animxyz/core": "0.6.6",
