--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -7,17 +7,18 @@ on:
 jobs:
   install:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node16.16.0-chrome87-ff82
+    container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Cypress install
-        uses: cypress-io/github-action@v5.5.1 # use the explicit version number
+      - name: Cache Cypress binary
+        uses: cypress-io/cache@v2
         with:
-          # Disable running of tests within install job
-          runTests: false
-          build: yarn build
+          cache-folder: /github/home/.cache/Cypress
+      - name: Install Cypress
+        run: cypress install
+
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
@@ -28,7 +29,7 @@ jobs:
 
   ui-chrome-tests:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node16.16.0-chrome87-ff82
+    container: cypress/browsers:node12.18.3-chrome87-ff82
     needs: install
     strategy:
       fail-fast: false
