--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -17,6 +17,8 @@ jobs:
           # Disable running of tests within install job
           runTests: false
           build: yarn build
+      - name : install
+        uses: yarn add cypress
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
