--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -18,7 +18,7 @@ jobs:
           runTests: false
           build: yarn build
       - name : install
-        uses: yarn add cypress
+        run: yarn add cypress
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
