--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -18,7 +18,7 @@ jobs:
           runTests: false
           build: yarn build
       - name : install
-        run: yarn add cypress
+        run: npm install cypress
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
@@ -35,7 +35,7 @@ jobs:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+        containers: [1, 2]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
