--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -1,66 +1,35 @@
-name: Cypress Tests with Install Job and UI Chrome Job
+name: Cypress Tests
 
 on:
   push:
     branches:
       - main
+
 jobs:
-  install:
+  build:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Cypress install
-        uses: cypress-io/github-action@v5.5.1 # use the explicit version number
-        with:
-          # Disable running of tests within install job
-          runTests: false
-          build: yarn build
-      - name : install
-        run: yarn add cypress
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: dist
+      - name: Install dependencies
+        run: npm ci
 
-  ui-chrome-tests:
-    runs-on: ubuntu-latest
-    container: cypress/browsers:node12.18.3-chrome87-ff82
-    needs: install
-    strategy:
-      fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Start dev server
+        run: npm run dev &
 
-      - name: Download the build folders
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-          path: dist
+      - name: Wait for dev server to start
+        run: npx wait-on http://localhost:3000
 
-      - name: 'UI Tests - Chrome'
-        uses: cypress-io/github-action@v5.5.1 # use the explicit version number
+      - name: Cypress run
+        uses: cypress-io/github-action@v2.7.2
         with:
-          # we have already installed all dependencies above
-          install: false
-          start: yarn run dev
-          wait-on: 'http://localhost:3000'
-          wait-on-timeout: 120
           browser: chrome
           record: true
           parallel: true
-          group: 'UI - Chrome'
-          spec: cypress/tests/ui/*
+          group: 'Cypress Tests'
+          spec: cypress/integration/*.spec.js
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # Recommended: pass the GitHub token lets this action correctly
-          # determine the unique run id necessary to re-run the checks
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
