--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm run dev &
 
       - name: Wait for dev server to start
-        run: npx wait-on http://localhost:3000 --timeout 120000
+        run: npx wait-on http://localhost:3000 
         
 
       - name: Cypress run
