--- a/.github/workflows/chrome-e2e.yml
+++ b/.github/workflows/chrome-e2e.yml
@@ -15,12 +15,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Start dev server
-        run: npm run dev &
-
-      - name: Wait for dev server to start
-        run: npx wait-on http://localhost:3000 
-        
+      - name: E2E Testing 🤖
+        uses: cypress-io/github-action@v2
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          record: true
+          start: yarn run dev
+          parallel: true
+          browser: chrome
+          wait-on-timeout: 180
+          wait-on: 'http://localhost:3000'
 
       - name: Cypress run
         uses: cypress-io/github-action@v2.7.2
